--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,17 @@
 [package]
 name = "seqfold-rs"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2024"
+
+[workspace]
+members = ["seqfold"]
 
 [dependencies]
 
 [dev-dependencies]
 approx = "0.5"
+criterion = { version = "0.7", features = ["html_reports"] }
+
+[[bench]]
+name = "benches"
+harness = false
